Don't create new Map instances when using the default parameter for tables